# GRaTeR-JAX

./: .gitignore  .readthedocs.yml  DiskMCMC_full.ipynb  DiskTutorial.ipynb  Disk_Jaxed.ipynb  Disk_Jaxed_Minimize.ipynb  Disk_Spline.ipynb  GPI_fits_test_BLL.ipynb  GPI_init_fit.ipynb  GPI_init_fit.py  GPI_init_fit_automated.ipynb  GPI_init_fits.py  HD145560_mcmc.ipynb  HR4796_fit.ipynb  ObjectiveFunctionTest (2).ipynb  ObjectiveFunctionTest.ipynb  README.md  SLD_ojax.py  SLD_utils.py  SimpleDiskFit.ipynb  WinnieClassTest.ipynb  disk_utils_jax.py  environment.yml  hmctest_full.py  image_info.csv  image_info_filt.csv  image_info_mmb.csv  imageshiftopt.py  interpolated_map_spline.py  interpolationtest.py  likelihood_funcs.py  mcmc_model.py  mcmctest.py  mcmctest_full.py  mctest_utils.py  optimize.py  optimize_framework.py  pyproject.toml  quick_grad_test.py  regression.py  (+4 more)
Fits/: aumic_H_pol.fits  betpic_H_pol.fits  ceant_H_pol.fits  hd106906_H_pol.fits  hd110058_H_pol.fits  hd111520_H_pol.fits  hd114082_H_pol.fits  hd115600_H_pol.fits  hd117214_H_pol.fits  hd129590_H_pol.fits  hd131835_H_pol.fits  hd143675_H_pol.fits  hd145560_H_pol.fits  hd146897_H_pol.fits  hd156623_H_pol.fits  hd157587_H_pol.fits  hd191089_H_pol.fits  hd30447_H_pol.fits  hd32297_H_pol.fits  hd35841_H_pol.fits  hd61005_H_pol.fits  hr4796a_H_pol.fits  hr7012_H_pol.fits
FitsResults/: fits.csv
JOSS_docs/: paper.md
PSFs/: README_psfs.md
disk_model/: SLD_ojax.py  SLD_utils.py  __init__.py  jax_gradient_wrappers.py  jax_model_wrappers.py  objective_functions.py  stellar_psfs.py  winnie_class.py
docs/: conf.py  getting_started.md  index.md  index.rst
optimization/: hmc_model.py  mcmc_model.py  optimize_framework.py
statistical_analysis/: DiskTutorial.ipynb  SLD_ojax.py  SLD_utils.py  hmc_test.ipynb  hmctest_full.py  image_info_filt.csv  mcmctest.py  mcmctest_full.py  mctest.out  mctest_utils.py  model_funcs.py  old_optimize_framework.py  optimize.py  optimize_framework.py  regression.py  spf_generic_new.fits
test_images/: hd111161_H_pol.fits
tutorials/: DiskTutorial.ipynb  DiskTutorial_old.ipynb
utils/: SLD_ojax.py  SLD_utils.py  __init__.py  disk_utils_jax.py  mctest_utils.py  new_SLD_utils.py  old_SLD_utils.py  (+4 more)
(+222 files in other folders)
