[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grater-jax-env"
version = "0.1.0"
description = "JAX-powered scientific analysis and modeling tools for GRaTeR disks."
authors = [
    { name = "Mihir Kondapalli", email = "mihir.kondapalli@gmail.com" },
    { name = "Briley Lewis", email = "brileylewis@g.ucla.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "astropy",
    "emcee",
    "jax",
    "jaxlib",
    "jaxopt",
    "photutils",
    "astroquery",
    "poppy",
    "stsynphot",
    "synphot",
    "webbpsf-ext",
    "pysiaf",
    "xarray",
    "arviz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
]

[tool.setuptools]
# Option A: hard-code the package name (simplest)
# packages = ["grater_jax"]

# Option B: auto-discover but only include our package namespace
[tool.setuptools.packages.find]
where = ["."]
include = ["grater_jax*"]
exclude = ["JOSS_docs*", "docs*", "tests*"]
